syntax = "proto3";

package com.example.services;

option java_package = "com.example.services";

option java_multiple_files = true ;

service CustomerService {
    rpc Addition(RequestMessage) returns (ResponseMessage );

    rpc Multiplication(RequestMessage) returns (ResponseMessage );

    rpc Subtraction(RequestMessage) returns (ResponseMessage) ;

    rpc Division(RequestMessage) returns (ResponseMessage );
}

message RequestMessage {
    int32 first_num = 1;
    int32 second_num = 2;
}


message ResponseMessage {
    int32 result = 1;
}

